# Saxon

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yaml
architecture/: README.md
changelog/: README.md
documentation/app/: README.md
documentation/theming/: README.md  themes.ini
src/: App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  navidrome.rs
src/components/: artist-links.tsx  artist-view.tsx  header.tsx  now-playing.tsx  player-controls.tsx  playlist-cover-collage.tsx  queue-view.tsx  settings-panel.tsx  sidebar.tsx  track-list.tsx
src/components/ui/: slider.tsx
src/lib/: theme.ts  types.ts  utils.ts
