[package]
name = "saxon"
version = "0.1.1"
description = "Saxon Music Player"
authors = ["you"]
edition = "2021"

[lib]
name = "saxon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lofty = "0.15"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1.19.0", features = ["v4"] }
